Fix library icon being stretched in Canaray

--- a/ui/library.reel/library-cell.reel/library-cell.css
+++ b/ui/library.reel/library-cell.reel/library-cell.css
@@ -52,6 +52,7 @@
 	margin: 0 8px 0 0;
 	width: 42px;
 	vertical-align: top;
+	align-self: center; /* Fixes icon being stretched in Chrome Canaray */
 }
 
 
